force-app/main/default/objects/Contact/fields/AngelList__c.field-meta.xml
<CustomField>
    <fullName>AngelList__c</fullName>
    <label>AngelList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>