force-app/main/default/objects/Contact/fields/Apollo_ID__c.field-meta.xml
<CustomField>
    <fullName>Apollo_ID__c</fullName>
    <label>Apollo ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>