force-app/main/default/objects/Contact/fields/Apollo_URL__c.field-meta.xml
<CustomField>
    <fullName>Apollo_URL__c</fullName>
    <label>Apollo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>