force-app/main/default/objects/Contact/fields/Associated_deals__c.field-meta.xml
<CustomField>
    <fullName>Associated_deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deal records associated with a Person record</description>
    <inlineHelpText>Deal records associated with a Person record</inlineHelpText>
    <label>Associated deals</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts (Associated deals)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>