force-app/main/default/objects/Contact/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <label>Avatar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>