force-app/main/default/objects/Contact/fields/CompanyLeads__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>CompanyLeads__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>