force-app/main/default/objects/Contact/fields/Last_calendar_interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_calendar_interaction__c</fullName>
    <label>Last calendar interaction</label>
    <type>Date</type>
</CustomField>