force-app/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Home city of contact</description>
    <inlineHelpText>Home city of contact</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>