force-app/main/default/objects/Contact/fields/Opportunity_POC__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity POC</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>