force-app/main/default/objects/Contact/fields/Phone_Number_Input__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Input__c</fullName>
    <description>Phone number input by the person at the time of contact</description>
    <inlineHelpText>Phone number input by the person at the time of contact</inlineHelpText>
    <label>Phone Number Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>