force-app/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <description>Define the role of the contact</description>
    <inlineHelpText>Define the role of the contact</inlineHelpText>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Economic buyer</fullName>
            </value>
            <value>
                <fullName>Tech integrator</fullName>
            </value>
            <value>
                <fullName>Executive sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>