force-app/main/default/objects/Contact/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>Brief description of contact&apos;s sentiment towards ElevenLabs - free form text</description>
    <inlineHelpText>Brief description of contact&apos;s sentiment towards ElevenLabs - free form text</inlineHelpText>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>