force-app/main/default/objects/Contact/fields/Sentiment_Category__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Category__c</fullName>
    <description>Category of their sentiment, derived from Sentiment description</description>
    <inlineHelpText>Category of their sentiment, derived from Sentiment description</inlineHelpText>
    <label>Sentiment Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>promoter</fullName>
            </value>
            <value>
                <fullName>detractor</fullName>
            </value>
            <value>
                <fullName>evangelist</fullName>
            </value>
            <value>
                <fullName>non-public promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>