force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How we sourced this contact&apos;s data</description>
    <inlineHelpText>How we sourced this contact&apos;s data</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Inbound Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>