force-app/main/default/objects/Contact/fields/Strongest_connection__c.field-meta.xml
<CustomField>
    <fullName>Strongest_connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strongest connection</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>